--- a/bubbles.css
+++ b/bubbles.css
@@ -143,7 +143,8 @@ form button:hover {
     top: 0;
     left: 0;
     width: 100%;
-    height: 50%;
+    height: 100%;
+    max-height: 1000px;
     z-index: 1;
 }
 
